# ParticlePhaseSpace

./: .buildinfo  .gitignore  BendingRadius.html  IAEA.html  README.md  basic_example.html  basic_example.ipynb  code_docs.html  dev_requirements  examples.html  figure_1.indd  figure_1_converted.indd  genindex.html  grid_merge.html  grid_merge.ipynb  index.html  limitations.html  new_data_exporter.html  new_data_exporter.ipynb  new_data_loader.html  objects.inv  paper.bib  paper.md  paper_figure.pptx  phase_space_format.html  plotting.html  py-modindex.html  pyproject.toml  resampling_via_gaussian_kde.html  resampling_via_gaussian_kde.ipynb  search.html  searchindex.js  setup.cfg  supported_particles.html  transform.html  units.html  units.ipynb
ParticlePhaseSpace/: DataExporters.py  DataGenerators.py  DataImporters.py  DataLoaders.py  ParticlePhaseSpace.py  _DataExporters.py  _DataLoaders.py  _PS_public_methods.py  _ParticlePhaseSpace.py  __config.py  __init__.py  __particle_config__.py  __particles.py  __phase_space_config__.py  __unit_config__.py  utilities.py
_sources/: IAEA.ipynb.txt  basic_example.ipynb.txt  code_docs.rst.txt  examples.rst.txt  index.rst.txt  new_data_exporter.ipynb.txt  new_data_loader.ipynb.txt  resampling_via_gaussian_kde.ipynb.txt  transform.ipynb.txt  units.ipynb.txt
docsrc/: BendingRadius.md  Makefile  code_docs.rst  conf.py  examples.rst  index.rst  limitations.md  make.bat  phase_space_format.md  plotting.ipynb  supported_particles.md
doctrees/: BendingRadius.doctree  IAEA.doctree  basic_example.doctree  code_docs.doctree  environment.pickle  examples.doctree  grid_merge.doctree  index.doctree  limitations.doctree  new_data_exporter.doctree  new_data_loader.doctree  phase_space_format.doctree  plotting.doctree  resampling_via_gaussian_kde.doctree  supported_particles.doctree  transform.doctree  units.doctree
examples/: IAEA.ipynb  PhaseSpaceExpansion.ipynb  README.md  basic_example.ipynb  demo_phase_space.py  demonstrate_sine_plotter.py  grid_merge.ipynb  new_data_exporter.ipynb  new_data_loader.ipynb  phase_space_expansion.ipynb  resampling_via_gaussian_kde.ipynb  topas_twiss.ipynb  transform.ipynb  twiss.py  units.ipynb  user_defined.ipynb
html/: BendingRadius.html  IAEA.html  basic_example.html  basic_example.ipynb  code_docs.html  examples.html  genindex.html  grid_merge.html  grid_merge.ipynb  index.html  limitations.html  objects.inv  (+14 more)
(+36 files in other folders)
