[metadata]
name = example-package-bwheelz36
version = attr: MyPackage.__version__
author = Brendan Whelan
author_email = bwheelz36@gmail.com
description = A small example package
long_description = file: README.md
license_files = LICENSE
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
package_dir =
    = .
packages = MyPackage
python_requires = >=3.6
install_requires =
    numpy >= 1.6.0
    matplotlib >= 3.5.0

