[metadata]
name = ParticlePhaseSpace
version = attr: ParticlePhaseSpace.__version__
author = Brendan Whelan
author_email = bwheelz36@gmail.com
description = Import, analyze, manipulate, and export particle phase space data
long_description = file: README.md
license_files = LICENSE
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/bwheelz36/ParticlePhaseSpace/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
package_dir =
    = .
packages = ParticlePhaseSpace
python_requires = >=3.8
install_requires =
    numpy
    matplotlib
    pandas
    topas2numpy
    scipy

